# capp-30239-static

./: README.md  hello.py  pyproject.toml
data_cleaning/: global_findex_process.ipynb
milestones/: static-draft.md  static-proposal.md
src/: global_findex_viz.ipynb  pre_process.py
src/.ipynb_checkpoints/: global_findex_process-checkpoint.ipynb  global_findex_viz-checkpoint.ipynb
