[project]
name = "capp-30239-static"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "polars>=1.34.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
]
